Use the same HTML/CSS for the bottom navigation items as those at the top, to give more spacing. https://bugs.corefiling.com/show_bug.cgi?id=44252

--- a/WebContent/resources/default-style.css
+++ b/WebContent/resources/default-style.css
@@ -273,6 +273,10 @@ h2.results-wiki {
   padding: 1em 0;
 }
 
+#bottomNav {
+  padding-left: 0px;
+}
+
 #sidebar {
   float: right;
   padding: 10px;
